--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to Our Webchat</h1>
-    <p>Interact with our chatbot below:</p>
+    <p>Interact with our chatbot below1:</p>
     <script
         src="https://cdn.cai.tools.sap/webchat/webchat.js"
         channelId="fb599ff3-b07a-4f67-bb3d-680b31faa5af"
